--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -12,3 +12,12 @@ h1 {
   font-weight: 200;
   color: #0ccac4;
 }
+
+::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
